<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/create_new_task_label"
        android:text="@string/create_task_dialog_label_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/from_favorites_button"
        android:background="@drawable/rounded_blue_button"
        android:text="from favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_new_task_label"
        android:layout_toLeftOf="@+id/create_item_button"
        android:layout_toStartOf="@+id/create_item_button"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/or_label"
        android:text="or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_favorites_button"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/to_do_item_descriptor"
        android:inputType="text"
        android:hint="@string/create_task_dialog_hint_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or_label"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add to favourites"
        android:id="@+id/add_to_favorite_checkbox"
        android:layout_below="@+id/to_do_item_descriptor" />

    <Button
        android:id="@+id/create_item_button"
        android:background="@drawable/rounded_blue_button"
        android:text="@string/create_btn_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/add_to_favorite_checkbox"
        android:layout_below="@+id/to_do_item_descriptor"/>

</RelativeLayout>