<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <TextView
        android:id="@+id/to_do_item_descriptor"
        android:background="@drawable/rounded_white_rectangle"
        android:text="Text Should be overwritten"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10px"
        android:padding="30px"/>

    <Button
        android:id="@+id/done_item_button"
        android:background="@drawable/rounded_blue_button"
        android:text="@string/done_btn_txt"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/to_do_item_descriptor"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/delete_item_button"
        android:layout_alignRight="@+id/delete_item_button"
        android:layout_marginTop="10px"/>

    <Button
        android:id="@+id/give_up_item_button"
        android:background="@drawable/rounded_red_button"
        android:text="@string/give_up_btn_txt"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/done_item_button"
        android:layout_centerHorizontal="true"
        android:layout_alignLeft="@+id/delete_item_button"
        android:layout_alignRight="@+id/delete_item_button"
        android:layout_marginTop="10px"/>

    <Button
        android:id="@+id/delete_item_button"
        android:background="@drawable/rounded_black_button"
        android:text="@string/delete_item_btn_txt"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/give_up_item_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10px"
        android:padding="10px"/>

</RelativeLayout>